@@ -1,6 +1,6 @@
 # This file is generated by objective.metadata
 #
-# Last update: Mon Sep 24 11:20:59 2012
+# Last update: Sun Dec 28 20:53:43 2014
 
 import objc, sys
 
@@ -16,7 +16,7 @@ else:
 misc = {
 }
 constants = '''$kSMDomainSystemLaunchd@^{__CFString=}$kSMDomainUserLaunchd@^{__CFString=}$kSMErrorDomainFramework@^{__CFString=}$kSMErrorDomainIPC@^{__CFString=}$kSMErrorDomainLaunchd@^{__CFString=}$kSMInfoKeyAuthorizedClients@^{__CFString=}$kSMInfoKeyPrivilegedExecutables@^{__CFString=}$'''
-enums = '''$kSMErrorAuthorizationFailure@4$kSMErrorInternalFailure@2$kSMErrorInvalidSignature@3$kSMErrorJobMustBeEnabled@9$kSMErrorJobNotFound@6$kSMErrorJobPlistNotFound@8$kSMErrorServiceUnavailable@7$kSMErrorToolNotValid@5$'''
+enums = '''$kSMErrorAuthorizationFailure@4$kSMErrorInternalFailure@2$kSMErrorInvalidPlist@10$kSMErrorInvalidSignature@3$kSMErrorJobMustBeEnabled@9$kSMErrorJobNotFound@6$kSMErrorJobPlistNotFound@8$kSMErrorServiceUnavailable@7$kSMErrorToolNotValid@5$'''
 misc.update({'kSMRightModifySystemDaemons': b'com.apple.ServiceManagement.daemons.modify', 'kSMRightBlessPrivilegedHelper': b'com.apple.ServiceManagement.blesshelper'})
 functions={'SMJobBless': (b'Z^{__CFString=}^{__CFString=}^{AuthorizationOpaqueRef=}^^{__CFError}', '', {'arguments': {3: {'already_cfretained': True, 'type_modifier': 'o', 'null_accepted': True}}}), 'SMJobRemove': (b'Z^{__CFString=}^{__CFString=}^{AuthorizationOpaqueRef=}Z^^{__CFError}', '', {'arguments': {4: {'already_cfretained': True, 'type_modifier': 'o', 'null_accepted': True}}}), 'SMJobCopyDictionary': (b'^{__CFDictionary=}^{__CFString=}^{__CFString=}', '', {'retval': {'already_cfretained': True}}), 'SMJobSubmit': (b'Z^{__CFString=}^{__CFDictionary=}^{AuthorizationOpaqueRef=}^^{__CFError}', '', {'arguments': {3: {'already_cfretained': True, 'type_modifier': 'o', 'null_accepted': True}}}), 'SMLoginItemSetEnabled': (b'Z^{__CFString=}Z',), 'SMCopyAllJobDictionaries': (b'^{__CFArray=}^{__CFString=}', '', {'retval': {'already_cfretained': True}})}
 expressions = {}
