@@ -1,0 +1,190 @@
+//             GENERATED FILE DO NOT EDIT
+//
+// This file was generated by objective.metadata
+// Last update: Sun Dec 28 20:53:15 2014
+{
+ "arch": "i386", 
+ "definitions": {
+  "aliases": {}, 
+  "called_definitions": {}, 
+  "cftypes": {}, 
+  "classes": {}, 
+  "enum": {
+   "kSMErrorAuthorizationFailure": 4, 
+   "kSMErrorInternalFailure": 2, 
+   "kSMErrorInvalidPlist": 10, 
+   "kSMErrorInvalidSignature": 3, 
+   "kSMErrorJobMustBeEnabled": 9, 
+   "kSMErrorJobNotFound": 6, 
+   "kSMErrorJobPlistNotFound": 8, 
+   "kSMErrorServiceUnavailable": 7, 
+   "kSMErrorToolNotValid": 5
+  }, 
+  "expressions": {}, 
+  "externs": {
+   "kSMDomainSystemLaunchd": {
+    "typestr": "^{__CFString=}"
+   }, 
+   "kSMDomainUserLaunchd": {
+    "typestr": "^{__CFString=}"
+   }, 
+   "kSMErrorDomainFramework": {
+    "typestr": "^{__CFString=}"
+   }, 
+   "kSMErrorDomainIPC": {
+    "typestr": "^{__CFString=}"
+   }, 
+   "kSMErrorDomainLaunchd": {
+    "typestr": "^{__CFString=}"
+   }
+  }, 
+  "formal_protocols": {}, 
+  "func_macros": {}, 
+  "functions": {
+   "SMCopyAllJobDictionaries": {
+    "args": [
+     {
+      "name": "domain", 
+      "typestr": "^{__CFString=}"
+     }
+    ], 
+    "retval": {
+     "already_cfretained": true, 
+     "typestr": "^{__CFArray=}"
+    }
+   }, 
+   "SMJobBless": {
+    "args": [
+     {
+      "name": "domain", 
+      "typestr": "^{__CFString=}"
+     }, 
+     {
+      "name": "executableLabel", 
+      "typestr": "^{__CFString=}"
+     }, 
+     {
+      "name": "auth", 
+      "typestr": "^{AuthorizationOpaqueRef=}"
+     }, 
+     {
+      "already_cfretained": true, 
+      "name": "outError", 
+      "null_accepted": true, 
+      "type_modifier": "o", 
+      "typestr": "^^{__CFError=}"
+     }
+    ], 
+    "retval": {
+     "typestr": "Z"
+    }
+   }, 
+   "SMJobCopyDictionary": {
+    "args": [
+     {
+      "name": "domain", 
+      "typestr": "^{__CFString=}"
+     }, 
+     {
+      "name": "jobLabel", 
+      "typestr": "^{__CFString=}"
+     }
+    ], 
+    "retval": {
+     "already_cfretained": true, 
+     "typestr": "^{__CFDictionary=}"
+    }
+   }, 
+   "SMJobRemove": {
+    "args": [
+     {
+      "name": "domain", 
+      "typestr": "^{__CFString=}"
+     }, 
+     {
+      "name": "jobLabel", 
+      "typestr": "^{__CFString=}"
+     }, 
+     {
+      "name": "auth", 
+      "typestr": "^{AuthorizationOpaqueRef=}"
+     }, 
+     {
+      "name": "wait", 
+      "typestr": "Z"
+     }, 
+     {
+      "already_cfretained": true, 
+      "name": "outError", 
+      "null_accepted": true, 
+      "type_modifier": "o", 
+      "typestr": "^^{__CFError=}"
+     }
+    ], 
+    "retval": {
+     "typestr": "Z"
+    }
+   }, 
+   "SMJobSubmit": {
+    "args": [
+     {
+      "name": "domain", 
+      "typestr": "^{__CFString=}"
+     }, 
+     {
+      "name": "job", 
+      "typestr": "^{__CFDictionary=}"
+     }, 
+     {
+      "name": "auth", 
+      "typestr": "^{AuthorizationOpaqueRef=}"
+     }, 
+     {
+      "already_cfretained": true, 
+      "name": "outError", 
+      "null_accepted": true, 
+      "type_modifier": "o", 
+      "typestr": "^^{__CFError=}"
+     }
+    ], 
+    "retval": {
+     "typestr": "Z"
+    }
+   }, 
+   "SMLoginItemSetEnabled": {
+    "args": [
+     {
+      "name": "identifier", 
+      "typestr": "^{__CFString=}"
+     }, 
+     {
+      "name": "enabled", 
+      "typestr": "Z"
+     }
+    ], 
+    "retval": {
+     "typestr": "Z"
+    }
+   }
+  }, 
+  "informal_protocols": {}, 
+  "literals": {
+   "kSMRightBlessPrivilegedHelper": {
+    "unicode": false, 
+    "value": "com.apple.ServiceManagement.blesshelper"
+   }, 
+   "kSMRightModifySystemDaemons": {
+    "unicode": false, 
+    "value": "com.apple.ServiceManagement.daemons.modify"
+   }
+  }, 
+  "structs": {}
+ }, 
+ "framework": "ServiceManagement", 
+ "headers": [
+  "SMErrors.h", 
+  "SMLoginItem.h"
+ ], 
+ "release": "10.10.1", 
+ "sdk": "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk"
+}
