@@ -17,10 +17,12 @@ Version 3.1
 * Add bindings for FinderSync, CloudKit, CryptoTokenKit,
   MultipeerConnectivity (all new in OSX 10.10)
 
-* Updated bindings for StoreKit, WebKit and JavaScriptCore with the new APIs introduced
-  in OSX 10.9 and 10.10.
+* Updated bindings for ServiceManagement, Social, StoreKit, WebKit and JavaScriptCore
+  with the new APIs introduced in OSX 10.9 and 10.10.
 
 * TODO: Update existing bindings with new functionality in OSX 10.9 and 10.10
+
+* TODO: SpriteKit bindings are incomplete
 
 Version 3.0.5
 -------------
